Fix footer alignment issues on mobile

--- a/style/style2.css
+++ b/style/style2.css
@@ -113,15 +113,12 @@ input[type="checkbox"]:checked {
 
 .navMenuButton:hover{background-color: #555555; color: #222222;}
 
-footer {font-family: Noto; min-width: 1280px; margin: auto; text-align: right;}
+footer {font-family: Noto; max-width: 1280px; margin: auto; text-align: right;}
 
 .noCenter{text-align: left;}
 
 ul > li {color: #00C9FF;}
 ul > li > span {color: #cccccc;}
-
-/*Clear Float of Div Fields*/
-.clearFloat {clear: both;}
 
 /*Links*/
 a:link {color: #00C9FF; text-decoration: none;}
